[metadata]
name = django-core-base
version = 1.0.1
description = 处理Django Rbac权限,日志等
long_description = file: README.md
long_description_content_type = text/markdown
url = https://so.szyfd.xyz/
author = cx
author_email = 2256807897@qq.com
license = MIT
project_urls =
    Bug Tracker = https://so.szyfd.xyz/
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate
    Pillow >= 9.0.1
    django-cors-headers >= 3.11.0
    django-crispy-forms >= 1.14.0
    django-filter >= 21.1
    djangorestframework >= 3.13.1